syntax = "proto3";

package control;

service Control {
	rpc DiskUsage(DiskUsageRequest) returns (DiskUsageResponse);
	rpc Solve(SolveRequest) returns (SolveResponse);
	// rpc Status() returns ();
}

message DiskUsageRequest {
}

message DiskUsageResponse {
	repeated UsageRecord record = 1;
}

message UsageRecord {
	string ID = 1;
	bool Mutable = 2;
	bool InUse = 3;
	int64 Size = 4;
}

message SolveRequest {
	string Ref = 1;
	repeated bytes Definition = 2; // TODO: remove repeated
}

message SolveResponse {
	repeated VertexStatus vertex = 1;
}

message VertexStatus {
}
